--- a/src/sass/components/_registration-modal.scss
+++ b/src/sass/components/_registration-modal.scss
@@ -1,175 +1,358 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
+// #modalForm {
+//   position: fixed;
+//   top: 0;
+//   right: 0;
+//   left: 0;
+//   bottom: 0;
+//   z-index: 150;
+//   display: none;
+  
+// }
 
-$bg:#1a1f25;
-$button:#e6b333;
-$border:#22272d;
+#filter {
+  background-color: rgba(0,0,0,0.6);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  display: none;
 
+}
+// Font Family
+$body-font: "Roboto";
 
+// Font Weights
+$thin: 100;
+$light: 300;
+$regular: 400;
+$semibold: 500;
+$bold: 700;
+$ultra: 800;
 
-*, *:after, *:before{
-  box-sizing:border-box;
+// Base Font
+$base-font-family: $body-font, sans-serif;
+$base-font-size: 14px;
+$base-font-weight: $regular;
+$base-line-height: 1.6em;
+
+// Colors
+$black: #000000;
+$dark-gray: rgba($black, 0.8);
+$gray: rgba($black, 0.6);
+$light-gray: rgba($black, 0.4);
+$lighter-gray: rgba($black, 0.2);
+$white: #FFFFFF;
+$accent: #FF6B01;
+
+// Form Settings
+$max-width: 600px;
+$max-height: 400px;
+$gutters: 24px;
+
+html {
+  width: 100%;
+  height: 100%;
 }
 
-html, body {background:$bg;font-family: 'Roboto', sans-serif;}
+// body {
+//   background: linear-gradient(45deg,  rgba(66, 183, 245,0.8) 0%,rgba(66, 245, 189,0.4) 100%);
+//   color: $gray;
+//   font-family: $base-font-family;
+//   font-size: $base-font-size;
+//   line-height: $base-line-height;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+// }
 
-.clear {clear:both;}
-
-#man-people-user, #lock-locker {
-  fill:white;  
-}
-
-.wrapper{
-  width:300px; 
-  margin:12% auto;
-}
-
-form {position:relative;}
-
-.clear {clear:both;}
-.sign-in {
-  float:left; 
-  color:white;
-  font-size:1.3em;
-}
-.button {
-  float:right;
-  color:#7f8084;
-  border:1px solid $border;
-  padding:7px 15px;
-  border-radius:3px;
-  font-size:0.8em;
-  cursor:pointer; 
-}
-.button:hover {color:#d3d3d3}
-.lock {
-  position:absolute;
-  width:30px;
-  height:30px;
-  margin-top:10px;
-  padding:7px; 
-  left:5px;
-  &::after {
-    content:""; 
-    width:1px;
-    height:30px;
-    position:absolute;
-    background:$border; 
-    top:0px; 
-    left:100%; 
-  }
-}
-.user {
- 
-  position:absolute;
-  width:30px;
-  height:30px;
-  margin-top:10px;
-  padding:7px;
-  left:5px;
-  &::after {
-    content:""; 
-    width:1px;
-    height:30px;
-    position:absolute;
-    background:$border; 
-    top:0px; 
-    left:100%; 
-  }
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  background: rgba($black, 0.8);
+  width: 100%;
+  height: 100%;
 }
 
-input {
-  width:100%;
-  padding:5px;
-  height:40px;
-  border-radius:3px;
-  margin:5px 0;
-  outline: none;
-}
-input[type="text"]:focus, input[type="password"]:focus {
-  border:1px solid white;
-  box-shadow:none;
-}
-.user-input:focus .user{
-  background:white !important;
-   
-} 
+.form {
+  z-index: 15;
+  position: relative;
+  background: $white;
+  width: $max-width;
+  border-radius: 4px;
+  box-shadow: 0 0 30px rgba($black, .1);
+  box-sizing: border-box;
+  margin: 100px auto 10px;
+  overflow: hidden;
 
-
-input[type="text"]{
-  background:transparent; 
-  border:2px solid $border;
-  padding-left:45px;
-  color:$button;
-}
-input[type="password"]{
-  background:transparent; 
-  border:2px solid $border;
-  padding-left:45px;
-  color:$button;
-}
-input[type="submit"]{
-  background:$button; 
-  border:none;
-  color:white;
-  text-align:center;
-  font-size:0.8em;
-  cursor:pointer;
-}
-
-input[type="radio"]{
-  display:none; 
-}
-.radio-check {
-  width:50px;
-  height:20px;
-  border:1px solid $border;
-  border-radius:30px;
-  margin-top:10px;
-  float:left;
-  text-align:center;
-  padding:4px 0;
-  color:$button;
-  font-size:0.65em;
-  position:relative;
-  label{
-    margin:0 2px;
-    cursor:pointer;
-  }
-  .switch-selection{
-    display: block;
+  // Toggle
+  &-toggle {
+    z-index: 10;
     position: absolute;
-    width:11px;
-    height:11px; 
-    border-radius:50%;
-    background:#babbbd;
-    margin-top:-11px;
-    margin-left:11px; 
-    transition: 0.2s ease-out;
-  } 
-  
+    top: 60px;
+    right: 60px;
+    background: $white;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    transform-origin: center;
+    transform: translate(0, -25%) scale(0);
+    opacity: 0;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    &:before,
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 30px;
+      height: 4px;
+      background: $accent;
+      transform: translate(-50%, -50%);
+    }
+
+    &:before {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+
+    &:after {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+
+    &.visible {
+      transform: translate(0, -25%) scale(1);
+      opacity: 1;
+    }
+  }
+
+  &-group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 0 20px;
+
+    &:last-child {
+      margin: 0;
+    }
+
+    label {
+      display: block;
+      margin: 0 0 10px;
+      color: $gray;
+      font-size: 12px;
+      font-weight: $semibold;
+      line-height: 1;
+      text-transform: uppercase;
+      letter-spacing: .2em;
+
+      .two & {
+        color: $white;
+      }
+    }
+
+    input {
+      outline: none;
+      display: block;
+      background: rgba($black, 0.1);
+      width: 100%;
+      border: 0;
+      border-radius: 4px;
+      box-sizing: border-box;
+      padding: 12px 20px;
+      color: $gray;
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: $semibold;
+      line-height: inherit;
+      transition: 0.3s ease;
+
+      &:focus {
+        color: $dark-gray;
+      }
+
+      .two & {
+        color: $white;
+
+        &:focus {
+          color: $white;
+        }
+      }
+    }
+
+    button {
+      outline: none;
+      background: $accent;
+      width: 100%;
+      border: 0;
+      border-radius: 4px;
+      padding: 12px 20px;
+      color: $white;
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: $semibold;
+      line-height: inherit;
+      text-transform: uppercase;
+      cursor: pointer;
+
+      .two & {
+        background: $white;
+        color: $accent;
+      }
+    }
+
+    .form-remember {
+      font-size: 12px;
+      font-weight: $regular;
+      letter-spacing: 0;
+      text-transform: none;
+
+      input[type='checkbox'] {
+        display: inline-block;
+        width: auto;
+        margin: 0 10px 0 0;
+      }
+    }
+
+    .form-recovery {
+      color: $accent;
+      font-size: 12px;
+      text-decoration: none;
+    }
+  }
+
+  // Panel
+  &-panel {
+    padding: 60px calc(5% + 60px) 60px 60px;
+    box-sizing: border-box;
+
+    // Panel One
+    &.one {
+      &:before {
+        @extend .overlay;
+
+        content: '';
+        display: block;
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.3s ease;
+      }
+
+      &.hidden {
+        &:before {
+          display: block;
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
+
+    // Panel Two
+    &.two {
+      z-index: 5;
+      position: absolute;
+      top: 0;
+      left: 95%;
+      background: $accent;
+      width: 100%;
+      min-height: 100%;
+      padding: 60px calc(10% + 60px) 60px 60px;
+      transition: 0.3s ease;
+      cursor: pointer;
+
+      &:before,
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 60px;
+        left: 1.5%;
+        background: rgba($white, 0.2);
+        height: 30px;
+        width: 2px;
+        transition: 0.3s ease;
+      }
+
+      &:after {
+        left: 3%;
+      }
+
+      &:hover {
+        left: 93%;
+        box-shadow: 0 0 10px rgba($black, 0.2);
+
+        &:before,
+        &:after {
+          opacity: 0;
+        }
+      }
+
+      &.active {
+        left: 10%;
+        box-shadow: 0 0 10px rgba($black, 0.2);
+        cursor: default;
+
+        &:before,
+        &:after {
+          opacity: 0;
+        }
+      }
+    }
+  }
+
+  // Header
+  &-header {
+    margin: 0 0 40px;
+
+    h1 {
+      padding: 4px 0;
+      color: $accent;
+      font-size: 24px;
+      font-weight: $bold;
+      text-transform: uppercase;
+
+      .two & {
+        position: relative;
+        z-index: 40;
+        color: $white;
+      }
+    }
+  }
+
+  // Content
+  &-content {}
+
+  &-footer {}
 }
 
- .radio-yes:checked ~ .switch-selection{
-    margin-left:25px !important;
-  } 
-  
+// Pen Footer
+.pen-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: $max-width;
+  margin: 20px auto 100px;
 
-.check-label {
-  font-size:0.8em;
-  color:#7f8084;
-  margin-top:10px;
-  float:left;
-  padding:3px 0;
-  margin-left:10px;
+  a {
+    color: $white;
+    font-size: 12px;
+    text-decoration: none;
+    text-shadow: 1px 2px 0 rgba($black, .1);
+    
+    .material-icons {
+      width: 12px;
+      margin: 0 5px;
+      vertical-align: middle;
+      font-size: 12px;
+    }
+  }
 }
 
-
-.forgot-label {
-  font-size:0.8em;
-  color:#7f8084;
-  margin-top:10px;
-  float:right;
-  padding:3px 0;
-  cursor:pointer;
+.cp-fab {
+  background: $white !important;
+  color: $accent !important;
 }
-
