--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -1,4 +1,7 @@
-<nav class="main-nav">
-	<button type="button" uk-toggle="target: #modal-id">sign in</button>
-</nav>
+<ul class="auth-nav__list">
+	<li class="auth-nav__item">
+	  <button class="auth-btn login__btn" type="button">Log in</button>
+	</li>
+	
+  </ul>
   
