--- a/src/partials/registration-modal.html
+++ b/src/partials/registration-modal.html
@@ -1,6 +1,6 @@
 <div id="filter" ></div>
 <!-- Form-->
-<div id="modalForm">
+<div class="modal-form ">
 <div class="form">
   <div class="form-toggle"></div>
   <div class="form-panel one">
@@ -8,7 +8,7 @@
       <h1>Account Login</h1>
     </div>
     <div class="form-content">
-      <form>
+      <form class="form_content">
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" id="username" name="username" required="required"/>
@@ -19,11 +19,11 @@
         </div>
         <div class="form-group">
           <label class="form-remember">
-            <input type="checkbox"/>Remember Me
+            <input class="form-check-input" type="checkbox"/>Remember Me
           </label><a class="form-recovery" href="#">Forgot Password?</a>
         </div>
         <div class="form-group">
-          <button type="submit">Log In</button>
+          <button type="submit" class="btn__login">Log In</button>
         </div>
       </form>
     </div>
@@ -35,6 +35,10 @@
     <div class="form-content">
       <form>
         <div class="form-group">
+          <label for="email">Email Address</label>
+          <input type="email" id="email" name="email" required="required"/>
+        </div>
+        <div class="form-group">
           <label for="username">Username</label>
           <input type="text" id="username" name="username" required="required"/>
         </div>
@@ -42,16 +46,13 @@
           <label for="password">Password</label>
           <input type="password" id="password" name="password" required="required"/>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="cpassword">Confirm Password</label>
           <input type="password" id="cpassword" name="cpassword" required="required"/>
-        </div>
+        </div> -->
+      
         <div class="form-group">
-          <label for="email">Email Address</label>
-          <input type="email" id="email" name="email" required="required"/>
-        </div>
-        <div class="form-group">
-          <button type="submit">Register</button>
+          <button type="submit" class="btn__signup">Sign Up</button>
         </div>
       </form>
     </div>
