--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -1,7 +1,27 @@
-<ul class="auth-nav__list">
-	<li class="auth-nav__item">
-	  <button class="auth-btn login__btn" type="button">Log in</button>
-	</li>
-	
-  </ul>
+<nav class="nav">
+	<ul class="auth-nav__list">
+	  <li class="auth-nav__item">
+		<button class="auth-btn login__btn" type="button">Log in</button>
+	  </li>
+	  <li class="auth-nav__item">
+		<button class="auth-btn logout__btn" type="button">
+		  Log out
+		</button>
+	  </li>
+	</ul>
+	<ul class="nav__list">
+	  <li class="nav__item">
+		<a
+		  class="nav__link nav__link--active home-link"
+		  href="./index.html"
+		  >Home</a
+		>
+	  </li>
+	  <li class="nav__item">
+		<a class="nav__link library-link" href="./library.html"
+		  >My library</a
+		>
+	  </li>
+	</ul>
+  </nav>
   
