--- a/src/partials/registration-modal.html
+++ b/src/partials/registration-modal.html
@@ -1,114 +1,66 @@
-<div id="filter" ></div>
-<!-- Form-->
-<div class="modal-form ">
-<div class="form">
-  <div class="form-toggle"></div>
-  <div class="form-panel one">
-    <div class="form-header">
-      <h1>Account Login</h1>
-    </div>
-    <div class="form-content">
-      <form class="form_content">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" required="required"/>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required="required"/>
-        </div>
-        <div class="form-group">
-          <label class="form-remember">
-            <input class="form-check-input" type="checkbox"/>Remember Me
-          </label><a class="form-recovery" href="#">Forgot Password?</a>
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn__login">Log In</button>
-        </div>
-      </form>
-    </div>
-  </div>
-  <div class="form-panel two">
-    <div class="form-header">
-      <h1>Register Account</h1>
-    </div>
-    <div class="form-content">
-      <form>
-        <div class="form-group">
-          <label for="email">Email Address</label>
-          <input type="email" id="email" name="email" required="required"/>
-        </div>
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" required="required"/>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required="required"/>
-        </div>
-        <!-- <div class="form-group">
-          <label for="cpassword">Confirm Password</label>
-          <input type="password" id="cpassword" name="cpassword" required="required"/>
-        </div> -->
-      
-        <div class="form-group">
-          <button type="submit" class="btn__signup">Sign Up</button>
-        </div>
-      </form>
-    </div>
-  </div>
+<div class="container__form invis h-100 ">
+	<div class="row">
+		<div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+
+			<p class="text-center">Sign up</p>
+			<div class="close__icon">
+				<i class="fa-solid fa-circle-xmark"></i>
+			</div>
+			<form class="mx-1 mx-md-4 form">
+
+				<!-- <div class="form__input input__name">
+					<i class="fas fa-user fa-lg me-3 fa-fw"></i>
+					<div class="form-outline flex-fill mb-0">
+						<input type="text" id="userName" class="form-control" placeholder=" " />
+						<label class="form-label" for="userName">Your Name</label>
+					</div>
+				</div> -->
+
+				<div class="form__input">
+					<i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+					<div class="form-outline flex-fill mb-0">
+						<input type="email" id="userEmail" class="form-control" placeholder=" " />
+						<label class="form-label" for="userEmail">Your Email</label>
+					</div>
+				</div>
+
+				<div class="form__input">
+					<i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+					<div class="form-outline flex-fill mb-0">
+						<input type="password" id="firstPass" class="form-control" placeholder=" " />
+						<label class="form-label" for="firstPass">Password</label>
+					</div>
+				</div>
+
+				<!-- <div class="form__input">
+					<i class="fas fa-key fa-lg me-3 fa-fw"></i>
+					<div class="form-outline flex-fill mb-0">
+						<input type="password" id="repeatedPass" class="form-control" placeholder=" " />
+						<label class="form-label" for="repeatedPass">Repeat your password</label>
+					</div>
+				</div> -->
+
+				<div class="form-check d-flex justify-content-center mb-5">
+					<input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+					<label class="form-check-label" for="form2Example3">
+						I agree all statements in <a href="#!">Terms of service</a>
+					</label>
+				</div>
+
+
+				<div class="button__container">
+					<button type="submit" class="btn btn-primary btn__signup">Sign Up</button>
+					<button type="submit" class="btn btn-primary btn__login">Log In</button>
+				</div>
+			</form>
+
+		</div>
+		<div class="img__container">
+
+			<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp" class="img-fluid" alt="Sample image">
+
+		</div>
+	</div>
 </div>
-</div>
-<!-- <div class="pen-footer"><a href="https://www.behance.net/gallery/30478397/Login-Form-UI-Library" target="_blank"><i class="material-icons">arrow_backward</i>View on Behance</a><a href="https://github.com/andyhqtran/UI-Library/tree/master/Login%20Form" target="_blank">View on Github<i class="material-icons">arrow_forward</i></a></div> -->
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://codepen.io/andytran/pen/vLmRVp.js'></script>
-<script> $(document).ready(function() {
-  var panelOne = $('.form-panel.two').height(),
-    panelTwo = $('.form-panel.two')[0].scrollHeight;
 
-  $('.form-panel.two').not('.form-panel.two.active').on('click', function(e) {
-    e.preventDefault();
-
-    $('.form-toggle').addClass('visible');
-    $('.form-panel.one').addClass('hidden');
-    $('.form-panel.two').addClass('active');
-    $('.form').animate({
-      'height': panelTwo
-    }, 200);
-  });
-
-  $('.form-toggle').on('click', function(e) {
-    e.preventDefault();
-    $(this).removeClass('visible');
-    $('.form-panel.one').removeClass('hidden');
-    $('.form-panel.two').removeClass('active');
-    $('.form').animate({
-      'height': panelOne
-    }, 200);
-  });
-});</script>
-<script>
- 
-  // let show = function(state) {
-  //   document.getElementById('modalForm').style.display = state;
-  //   document.getElementById('filter').style.display = state;
-  // }
-
-//   (() => {
-//   const refs = {
-//     openModalBtn: document.querySelector('signInBtn'),
-//     closeModalBtn: document.querySelector("[data-modal-close]"),
-//     modal: document.querySelector("[data-modal]"),
-//   };
-
-//   refs.openModalBtn.addEventListener("click", toggleModal);
-//   refs.closeModalBtn.addEventListener("click", toggleModal);
-
-//   function toggleModal() {
-//     document.body.classList.toggle("modal-open");
-//     refs.modal.classList.toggle("is-hidden");
-//   }
-// })();
-
-
-</script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
